--- a/scss/app.scss
+++ b/scss/app.scss
@@ -64,8 +64,10 @@ body {
     margin-left: 0;
     cursor: pointer;
     li {
+      height:40px;
+      line-height: 40px;
       font-size: 13px !important;
-      padding: 5px;
+      padding: 0 5px;
       border-bottom: 1px solid white;
     }
 
@@ -79,7 +81,7 @@ body {
   }
 
   img {
-    margin-right: 10px;
+    margin-right: 2px;
   }
 }
 
