--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -26,6 +26,7 @@
 			<script src="{$basePath}/js/foundation-datepicker.js"></script>
 			<script src="{$basePath}/js/nette.ajax.js"></script>
 			<script src="{$basePath}/js/netteForms.js"></script>
+			<script src="{$basePath}/js/jquery.nicescroll.min.js"></script>
 			<script src="{$basePath}/js/angular.min.js"></script>
 			<script src="{$basePath}/js/scrollGlue.js"></script>
 
