--- a/app/controls/chat/chat.latte
+++ b/app/controls/chat/chat.latte
@@ -34,7 +34,7 @@
 			<span class="right"><i class="fi-x cursor-pointer" ng-click="closePopup(popup.userId)"></i></span>
 		</div>
 
-		<div ng-show="popup.status" class="chat-text" scroll-glue>
+		<div ng-show="popup.status" class="chat-text" scroll-glue id="chat-text-{{ popup.userId }}">
 			<img ng-src="{$basePath}/images/spinner-bubble.svg" alt="spinner" ng-show="popup.loading"/>
 			<ul ng-show="conversations[popup.userId] && conversations[popup.userId].length" class="chat-conversation">
 				<li ng-repeat="message in conversations[popup.userId]" ng-class="{ 'text-right': message.from != userId}">
