--- a/scss/app.scss
+++ b/scss/app.scss
@@ -9,6 +9,38 @@ body {
   background-color: whitesmoke;
 }
 
+textarea {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+.no-resize {
+  overflow: scroll;
+  resize: none;
+}
+
+.no-padding {
+  padding: 0;
+}
+
+.no-margin {
+  margin: 0;
+}
+
 #menu {
   .top-bar-section ul li{
     background: $dark-grey;
@@ -92,10 +124,6 @@ body {
   border-bottom: 2px solid $grey;
 }
 
-.without-padding {
-  padding:0;
-}
-
 .full-width {
   width: 100%;
   margin-left: auto;
@@ -139,10 +167,14 @@ td > .button {
 }
 
 .post {
+  padding-bottom: 20px;
+
   .post-header {
     background-color: $grey;
     width: 24.5%;
     text-align: center;
+    padding: 10px;
+
 
     i {
       line-height: 1em;
@@ -158,6 +190,27 @@ td > .button {
       margin:0
     }
   }
+
+  .created-date {
+    font-size: 12px;
+    color: #818181;
+  }
+}
+
+.posts {
+  .post-content {
+    padding-bottom: 0;
+  }
+
+  .bottom {
+    a {
+      color:white;
+
+      i {
+        font-size: 30px
+      }
+    }
+  }
 }
 
 hr.white {
@@ -169,6 +222,13 @@ hr.white {
     padding-right:$chat-width;
   }
 }
+
+@media #{$small-only} {
+  #main-content-wrapper {
+    padding-right:0;
+  }
+}
+
 
 #chat-popups {
   position: fixed;
