--- a/scss/app.scss
+++ b/scss/app.scss
@@ -334,3 +334,14 @@ hr.white {
 .cursor-pointer {
   cursor:pointer;
 }
+
+img.no-resize {
+  max-width: none;
+}
+
+.comment {
+  background-color: #d3d3d3;
+  margin-bottom: 15px;
+  font-size: 12px !important;
+  padding: 10px
+}
