--- a/app/controls/menu/menu.latte
+++ b/app/controls/menu/menu.latte
@@ -30,7 +30,7 @@
 		<ul class="right vertical-center">
 			<li class="left has-dropdown">
 					<a href="#">
-						<img class="img-circle " src="{$basePath}/images/{$user->getIdentity()->profilePicture|img:0,45}" alt=""/>
+						<img class="img-circle " src="{$basePath}/images/{$user->getIdentity()->profilePicture|img:45}" alt="" width="45"/>
 						<ul class="unstyled right" id="profile-info">
 							<li>{$user->getIdentity()->name} {$user->getIdentity()->surname}</li>
 							<div class="clearfix"></div>
